src/test/ui/issues/issue-23046.stderr
error[E0282]: type annotations needed in `Expr<'_, _>`
  --> $DIR/issue-23046.rs:17:15
   |
LL |     let ex = |x| {
   |               ^ consider giving this closure parameter the type `Expr<'_, _>` with the type parameter `VAR` specified

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
